2/26/2025
	Added support for repeated neighbors constraint, and added test case.
	Added support for slot machine, and added test case.
	Added additional test cases.

2/24/2025 bis
	Added test cases.

2/24/2025
	Eliminated terminateOnFirst argument from conditional lines and hanging clues in favor of a terminateOn argument, which defaults to the value 'First'.
	Any existing code for which terminateOnFirst was not set will continue to work. Any code that explicitly set terminateOnFirst=True can be patched by
	replacing with the string terminateOn='First', while code that implemented terminateOnFirst=False can be updated by replacing this string with
	terminateOn='Any'. Sorry for breaking backward compatibility, but hoping the feature is new enough it is not widely used. Updated test cases appropriately.
	
	Added new termination criteria ParityRepeatReached, for all of parity, entropy, modular, primality.
	Fixed bug in neighbor matching which was incorrectly excluding endpoints in the 'All' neighbors selection.
	Added test cases.

2/19/2025
	Added test case for next to nine sum.
	Added support for selection criteria for neighbors matching on entropy, parity, modular or primality, similar to criteria for having consecutive neighbors.
	Added support for Related Digit termination, where the termination criterion for a sum can be based upon an affine (ax+b) relationship with the value in a given cell.
	Added test cases for new selection and termination functionality.

2/12/2025
	Fixed some small bugs
	Added support for pool constraint, which is pretty dumb
	
2/6/2025 bis
	Added support for conditional instance lines and hanging instance clues (like conditional sum, but testing presence of digits matching the criteria instead of the sum of the criteria)
	Added selection criteria related to digits having consecutive neighbors.
	Note: these have undergone some initial testing, but need more. Am pushing solely to get code code back home.

2/6/2025