@@ -347,7 +347,7 @@ class sudoku:
 	
 	from ._singleCell import setGiven,setGivenArray,setMinMaxCell,setMinCell,setMaxCell,setMinMaxArray,setMaxMinArray,setMinArray,setMaxArray,setEvenOdd,setOddEven,setEven,setOdd,setEvenArray,setOddArray,setEvenOddArray,setOddEvenArray,setNeighborSum,setNeighbourSum,setNeighborSumArray,setNeighbourSumArray,setFriendly,setFriendlyArray,setUnfriendly,setUnfriendlyArray,setFriendlyNegative,_applyFriendlyNegative,setScary,setPencilmarks,setPencilmarksArray,setSearchNine,setLogicBomb,assertNumberOfLogicBombs,setCupid,setNearestNeighbor,setNearestNeighbour,setDifferentNeighbors,setDifferentNeighbours,setSlingshot,_initializeNeighborSet,_setNeighborSetBase,setPosNeighborSet,setPosNeighbourSet,setNegNeighborSet,setNegNeighbourSet,setPosNeighborSetArray,setPosNeighbourSetArray,setNegNeighborSetArray,setNegNeighbourSetArray,setNeighborSetArray,setNeighbourSetArray,setNeighborSetProperty,setNeighbourSetProperty,setNeighborSetNegative,setNeighbourSetNegative,_applyNeighborSetNegative,setRemoteClone,setRepeatedNeighbors,setRepeatedNeighbours,setRepeatedNeighborsArray,setRepeatedNeighboursArray,setDistinctNeighbors,setDistinctNeighbours,setDistinctNeighborsArray,setDistinctNeighboursArray,setRepeatedNeighborsNegative,setRepeatedNeighboursNegative,_applyRepeatedNeighborsNegative
 	
-	from ._multiCell import setFortress,_initializeKropkiWhite,_initializeKropkiBlack,setKropkiWhite,setKropkiBlack,setKropkiGray,setKropkiWhiteArray,setKropkiBlackArray,setKropkiGrayArray,setKropkiArray,setKropkiWhiteNegative,setKropkiBlackNegative,setKropkiNegative,setAntiKropkiWhite,setAntiKropkiBlack,setAntiKropki,setAntiKropkiWhiteArray,setAntiKropkiBlackArray,setAntiKropkiArray,_applyKropkiWhiteNegative,_applyKropkiBlackNegative,setKropkiDifference,setKropkiRatio,setGammaEpsilon,_initializeRemoteKropkiWhite,_initializeRemoteKropkiBlack,_setRemoteKropkiBase,setRemoteKropkiWhite,setRemoteKropkiBlack,setRemoteKropkiGray,setRemoteKropkiWhiteArray,setRemoteKropkiBlackArray,setRemoteKropkiGrayArray,setRemoteKropkiArray,setRemoteKropkiDifference,setRemoteKropkiRatio,_initializeRomanSum,setRomanSum,setXVV,setXVX,setRomanSumArray,setXVVArray,setXVXArray,setXVArray,setAntiRomanSum,setAntiRomanSums,setAntiXVV,setAntiXVX,setAntiXV,setAntiRomanSumArray,setAntiRomanSumsArray,setAntiXVVArray,setAntiXVXArray,setAntiXVArray,setRomanSumNegative,setXVVNegative,setXVXNegative,setXVNegative,_applyRomanSumNegative,setXVXVV,setXVXVX,setXVXVVArray,setXVXVXArray,setXVXVArray,setAntiXVXV,setAntiXVXVArray,setXVXVNegative,_applyXVXVNegative,setXYDifference,setXYDifferenceArray,setAntiXYDifference,setAntiXYDifferenceArray,setXYDifferenceNegative,_applyXYDifferenceNegative,setEitherOr,setEitherOrArray,setCloneRegion,setDominantCloneRegion,setShakenCloneRegion,setHiddenClones,setCage,setMaxMinSumCage,setRepeatingCage,setMedianCage,setBlockCage,setMOTECage,setMETOCage,setUniparityCage,setEquiparityCage,setAllOddOrEven,setPuncturedCage,setPsychoKillerCage,setKnappDanebenCage,setCapsule,setDavidAndGoliath,setDigitCountCage,setVault,setZone,setLookAndSayCage,setPsychoLookAndSayCage,setOrderSumCages,setMagicSquare,setEntropkiWhite,setEntropkiBlack,setEntropkiWhiteArray,setEntropkiBlackArray,setEntropkiArray,setParityDotWhite,setParityDotBlack,setParityDotWhiteArray,setParityDotBlackArray,setParityDotArray,setGenetic,setGeneticArray,setParitySnake,setConsecutiveChainRegion,setAntiQueenCell,setTripleTab,setEqualSumCages,setSlotMachine
+	from ._multiCell import setFortress,_initializeKropkiWhite,_initializeKropkiBlack,setKropkiWhite,setKropkiBlack,setKropkiGray,setKropkiWhiteArray,setKropkiBlackArray,setKropkiGrayArray,setKropkiArray,setKropkiWhiteNegative,setKropkiBlackNegative,setKropkiNegative,setAntiKropkiWhite,setAntiKropkiBlack,setAntiKropki,setAntiKropkiWhiteArray,setAntiKropkiBlackArray,setAntiKropkiArray,_applyKropkiWhiteNegative,_applyKropkiBlackNegative,setKropkiDifference,setKropkiRatio,setGammaEpsilon,_initializeRemoteKropkiWhite,_initializeRemoteKropkiBlack,_setRemoteKropkiBase,setRemoteKropkiWhite,setRemoteKropkiBlack,setRemoteKropkiGray,setRemoteKropkiWhiteArray,setRemoteKropkiBlackArray,setRemoteKropkiGrayArray,setRemoteKropkiArray,setRemoteKropkiDifference,setRemoteKropkiRatio,_initializeRomanSum,setRomanSum,setXVV,setXVX,setRomanSumArray,setXVVArray,setXVXArray,setXVArray,setAntiRomanSum,setAntiRomanSums,setAntiXVV,setAntiXVX,setAntiXV,setAntiRomanSumArray,setAntiRomanSumsArray,setAntiXVVArray,setAntiXVXArray,setAntiXVArray,setRomanSumNegative,setXVVNegative,setXVXNegative,setXVNegative,_applyRomanSumNegative,setXVXVV,setXVXVX,setXVXVVArray,setXVXVXArray,setXVXVArray,setAntiXVXV,setAntiXVXVArray,setXVXVNegative,_applyXVXVNegative,setXYDifference,setXYDifferenceArray,setAntiXYDifference,setAntiXYDifferenceArray,setXYDifferenceNegative,_applyXYDifferenceNegative,setEitherOr,setEitherOrArray,setCloneRegion,setDominantCloneRegion,setShakenCloneRegion,setHiddenClones,setCage,setMaxMinSumCage,setRepeatingCage,setMedianCage,setBlockCage,setMOTECage,setMETOCage,setUniparityCage,setEquiparityCage,setAllOddOrEven,setPuncturedCage,setPsychoKillerCage,setKnappDanebenCage,setEqualSumCages,setRankedCage,setCapsule,setDavidAndGoliath,setDigitCountCage,setVault,setZone,setLookAndSayCage,setPsychoLookAndSayCage,setOrderSumCages,setMagicSquare,setEntropkiWhite,setEntropkiBlack,setEntropkiWhiteArray,setEntropkiBlackArray,setEntropkiArray,setParityDotWhite,setParityDotBlack,setParityDotWhiteArray,setParityDotBlackArray,setParityDotArray,setGenetic,setGeneticArray,setParitySnake,setConsecutiveChainRegion,setAntiQueenCell,setTripleTab,setSlotMachine
 	
 	from ._externalClues import setLittleKiller,setXSumBase,setXSum,setReverseXSum,setDoubleXSum,setXAverageBase,setXAverage,setReverseXAverage,setXKropki,setNumberedRoomBase,setNumberedRoom,setReverseNumberedRoom,setSandwichSum,setOpenfacedSandwichSum,setShortSandwichSum,setConditionalSandwichSum,setBeforeNine,setBattlefield,setPositionSum,_setDigitsInBlock,setOutside,setOutsideDiagonal,setOutsideLength,setCornerEdge,setRossini,setRossiniLength,setRossiniNegative,_applyRossiniNegative,setMaxAscendingRun,setMaxAscending,setSkyscraper,setSkyscraperSum,setNextToNine,setNextToNineSum,setMaximumRun,setMaximumTriplet,setDescriptivePair,setMinimax,setMaximin,setFullRank,setParityParty,setSumSandwich,setAscendingStarter,setFirstSeenParity,setFirstSeenEntropy,setFirstSeenModular,setPointingDifferents,setBust,setHangingSum,setHangingCount,setHangingAverage,setHangingInstance,setXOutside,setInOrder
 	
