@@ -1,3 +1,7 @@
+2/26/2025 bis
+	Added support for ranked cages, with test cases.
+	Added additional test cases.
+
 2/26/2025
 	Added support for repeated neighbors constraint, and added test case.
 	Added support for slot machine, and added test case.
